<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/universe"
    tools:context=".TutorialMenu">

    <TextView
        android:id="@+id/tvPazaak"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="23dp"
        android:layout_marginTop="27dp"
        android:gravity="center"
        android:text="@string/pazaak"
        android:textColor="@android:color/background_light"
        android:textSize="48sp"
        app:fontFamily="@font/verdanab"
        app:layout_constraintBottom_toTopOf="@+id/bRulebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Pazaak" />

    <Button
        android:id="@+id/bRulebook"
        android:layout_width="282dp"
        android:layout_height="55dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/gradient_transparent"
        android:text="@string/how_to_play"
        android:textColor="@android:color/background_light"
        app:fontFamily="@font/verdanab"
        app:layout_constraintBottom_toTopOf="@+id/bStartWalkthrough"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPazaak" />

    <Button
        android:id="@+id/bStartWalkthrough"
        android:layout_width="282dp"
        android:layout_height="55dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/gradient_transparent"
        android:text="@string/walkthrough"
        android:textColor="@android:color/background_light"
        app:fontFamily="@font/verdanab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bRulebook" />

</android.support.constraint.ConstraintLayout>